2022-05-08  dana  <dana@dana.is>

	* 50176 (with xpufx, tweaked): Completion/Linux/Command/_htop:
	Improve htop completion

2022-05-07  Bart Schaefer  <schaefer@zsh.org>

	* 50184: Completion/Base/Utility/_values: fix inclusion of -S
	separator in -r options passed to compadd through _describe

	* Marlon Richert: 49954: Completion/Unix/Command/_gradle: improve
	handling of task names, subprojects, completion tags, and caching

	* unposted: Doc/Zsh/builtins.yo: cross-reference "typeset -f" for
	"functions -[Tt]"

2022-05-02  Bart Schaefer  <schaefer@zsh.org>

	* unposted (cf. Jun-ichi 50164): Test/E01options.ztst: add sleep
	after nullexec test to allow background process to flush writes
	(observed only on MacOS Monterey 12).

	* 50162: Test/D07multibyte.ztst: Tweak 50150 test to check proper
	metafication of array elements and to ignore collation variances

2022-05-01  Bart Schaefer  <schaefer@zsh.org>

	* 50160: Test/D03procsubst.ztst, Test/E01options.ztst: Regression
	tests for 50126, 50136, and 50149

	* 50159: Test/V14system.ztst: Tests for sysread

	* 50157 (Daniel Shahaf): Test/D07multibyte.ztst: Test for 50150

2022-05-01  dana  <dana@dana.is>

	* unposted: Config/version.mk: Update for 5.8.1.3-test (5.9)

	* unposted: Etc/creating-a-release.txt: Mention #zsh topic

2022-04-30  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Etc/BUGS: remove debian #924736, fixed since 5.8 by
	workers/44142; correct misguided edit from earlier commit

	* unposted: Doc/Zsh/expn.yo, NEWS: Details about ${(*)...}

	* 50150: Src/Modules/stat.c: Filenames need unmetafy for printing

	* 50149: Etc/BUGS, Src/builtin.c, Src/jobs.c: Remove all =(...)
	files at shell exit

2022-04-29  Bart Schaefer  <schaefer@zsh.org>

	* 50136: Etc/BUGS, Src/exec.c: Fix =(nosuchcommand) race/deadlock
	first reported in workers/42609

	* 50134: Src/jobs.c: Tweak process group handling (workers/43409)
	to avoid creating "unkillable" pipelines that ignore signals
